2015-04-20  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (set_posix_access): Apply mask only in terms of execute bit
	for SYSTEM and Admins group.

2015-04-17  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (set_posix_access): Don't create DENY ACEs for USER and
	GROUP entries if they are the same as USER_OBJ or GROUP_OBJ.

2015-04-17  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_pty_slave::facl): Add prototype.
	* fhandler_tty.cc (fhandler_pty_slave::facl): New method.
	(fhandler_pty_slave::fchown): Fix uid/gid handling.
	* sec_acl.cc (set_posix_access): Drop superfluous class_idx variable.
	Simplify and move around code in a few places.  To improve ACL
	readability, add r/w permissions to Admins ACE appended to pty ACL.
	Add comment to explain Windows ACE Mask filtering being in the way of
	creating a real CLASS_OBJ.
	(get_posix_access): Fake CLASS_OBJ for ptys.  Explain why.
	* security.cc (get_object_attribute): Add S_IFCHR flag to attributes
	when calling get_posix_access.

2015-04-17  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::fetch_account_from_windows): Always revert SID
	subauth count after checking for known domain.

2015-04-17  Corinna Vinschen  <corinna@vinschen.de>

	* pwdgrp.h: Add comment to explain below change.
	(struct pg_pwd): Convert sid member to BYTE array.
	(struct pg_grp): Ditto.
	* grp.cc (pwdgrp::parse_group): Accommodate above change.
	* passwd.cc (pwdgrp::parse_passwd): Ditto.

2015-04-16  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (set_posix_access): Move merging group perms into owner
	perms in case of owner == group after mask has been computed.  Take
	mask into account when doing so to avoid unnecessary ACCESS_DENIED_ACE.

2015-04-16  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (get_posix_access): Only set saw_group_obj flag if we saw
	the ACCESS_ALLOWED_ACE.

2015-04-16  Corinna Vinschen  <corinna@vinschen.de>
